--- a/src/lib_benchmark/tezos-benchmark-examples.opam
+++ b/src/lib_benchmark/tezos-benchmark-examples.opam
@@ -6,22 +6,12 @@ bug-reports: "https://gitlab.com/tezos/tezos/issues"
 dev-repo: "git+https://gitlab.com/tezos/tezos.git"
 license: "MIT"
 depends: [
-  "tezos-tooling" { with-test }
   "dune" { >= "1.11" }
-  "tezos-base"
-  "tezos-stdlib"
-  "tezos-stdlib-unix"
-  "tezos-micheline"
-  "tezos-clic"
-  "data-encoding"
-  "staTz"
-  "benchmark-utils"
-  "pyml-plot"
-  "conf-autoconf"
-  "hashcons"
+  "tezos-benchmark"
+  "alcotest-lwt" { with-test & >= "1.1.0" }
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
   ["dune" "runtest" "-p" name "-j" jobs] {with-test}
 ]
-synopsis: "Tezos: library for writing benchmarks and performing simple parameter inference"
+synopsis: "Tezos: examples for lib-benchmarks"
