integration tests: do not include multibranch test for now

--- a/tests_python/pytest.ini
+++ b/tests_python/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
+; if you unignore multibranch tests, please update update_integration_test.sh
 addopts = --strict --ignore=tests/multibranch --verbose --tb=short
 markers =
     incremental
