--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ variables:
   ARTIFACT_DOWNLOAD_ATTEMPTS: "2"
 
 stages:
+  - sanity
   - build
   - test
   - doc
@@ -16,6 +17,23 @@ stages:
   - publish
   - test_coverage
   - publish_coverage
+
+############################################################
+## Stage: sanity (fast self-checks)                       ##
+############################################################
+
+sanity:
+  image: ${build_deps_image_name}:${build_deps_image_version}
+  stage: sanity
+  before_script:
+    - . ./scripts/version.sh
+  script:
+    - if [ "${build_deps_image_version}" != "${opam_repository_tag}" ] ; then
+        echo "Inconsistent dependencies hash between 'scripts/version.sh' and '.gitlab-ci.yml'." ;
+        echo "${build_deps_image_version} != ${opam_repository_tag}" ;
+        exit 1 ;
+      fi
+    - ./scripts/check_opam_test.sh
 
 ############################################################
 ## Stage: build (only MR)                                 ##
@@ -40,13 +58,7 @@ stages:
 check_opam_deps:
   <<: *build_definition
   script:
-    - if [ "${build_deps_image_version}" != "${opam_repository_tag}" ] ; then
-        echo "Inconsistent dependencies hash between 'scripts/version.sh' and '.gitlab-ci.yml'." ;
-        echo "${build_deps_image_version} != ${opam_repository_tag}" ;
-        exit 1 ;
-      fi
     - ./scripts/opam-check.sh
-    - ./scripts/check_opam_test.sh
 
 check_opam_lint:
   <<: *build_definition
