Stdlib: simplify and improve Lwt_pipe test
- remove unused Arg parsing
- increase coverage by passing different input values
- test more functions
- be stricter by testing empty
- add timeout to detect dead-lock failures
- use alcotest to get uniform output consistent with other tests

--- a/src/lib_stdlib/test/dune
+++ b/src/lib_stdlib/test/dune
@@ -4,6 +4,7 @@
         test_lwt_pipe)
  (libraries tezos-stdlib
             alcotest
+            alcotest-lwt
             lwt_log
             bigstring
             lwt.unix)
