general: use Filename.Infix from lib_base

--- a/src/lib_base/unix/dune
+++ b/src/lib_base/unix/dune
@@ -4,11 +4,13 @@
  (flags (:standard -open Tezos_error_monad
                    -open Tezos_crypto
                    -open Tezos_base
+                   -open Tezos_stdlib
                    -open Tezos_stdlib_unix
                    -open Data_encoding))
  (libraries data-encoding
             tezos-crypto
             tezos-base
+            tezos-stdlib
             tezos-stdlib-unix
             tezos-error-monad))
 
@@ -16,4 +18,3 @@
  (name runtest_lint)
  (deps (glob_files *.ml{,i}))
  (action (run %{lib:tezos-tooling:lint.sh} %{deps})))
-
