--- a/src/proto_006_PsCARTHA/lib_client/tezos-client-006-PsCARTHA.opam
+++ b/src/proto_006_PsCARTHA/lib_client/tezos-client-006-PsCARTHA.opam
@@ -13,6 +13,7 @@ depends: [
   "tezos-protocol-006-PsCARTHA"
   "tezos-shell-services"
   "tezos-mockup-registration"
+  "tezos-proxy"
   "tezos-signer-backends"
   "tezos-protocol-006-PsCARTHA-parameters"
   "alcotest-lwt" { with-test & >= "1.1.0" }
