--- a/src/proto_007_PsDELPH1/lib_client/dune
+++ b/src/proto_007_PsDELPH1/lib_client/dune
@@ -6,6 +6,7 @@
             tezos-shell-services
             tezos-client-base
             tezos-mockup-registration
+            tezos-proxy
             tezos-rpc
             tezos-signer-backends
             tezos-protocol-007-PsDELPH1-parameters)
