--- a/src/proto_008_PtEdoTez/lib_client/tezos-client-008-PtEdoTez.opam
+++ b/src/proto_008_PtEdoTez/lib_client/tezos-client-008-PtEdoTez.opam
@@ -9,11 +9,13 @@ depends: [
   "tezos-tooling" { with-test }
   "dune" { >= "2.0" }
   "tezos-base"
+  "tezos-client-base"
   "tezos-protocol-environment"
   "tezos-protocol-008-PtEdoTez"
   "tezos-shell-services"
   "tezos-client-base-unix"
   "tezos-mockup-registration"
+  "tezos-proxy"
   "tezos-signer-backends"
   "tezos-protocol-008-PtEdoTez-parameters"
   "alcotest-lwt" { with-test & >= "1.1.0" }
