--- a/src/proto_alpha/lib_client/tezos-client-alpha.opam
+++ b/src/proto_alpha/lib_client/tezos-client-alpha.opam
@@ -14,6 +14,7 @@ depends: [
   "tezos-shell-services"
   "tezos-client-base-unix"
   "tezos-mockup-registration"
+  "tezos-proxy"
   "tezos-signer-backends"
   "tezos-protocol-alpha-parameters"
   "alcotest-lwt" { with-test & >= "1.1.0" }
