Test: ignore .venv directory created by poetry
Co-Authored By: Mehdi Bouaziz <mehdi.bouaziz@nomadic-labs.com>

--- a/.dockerignore
+++ b/.dockerignore
@@ -44,7 +44,9 @@ _coverage_report
 **/*.orig
 
 .idea
-.venv
+# .venv directories are created by poetry if the option in-project is set to
+# true.
+**/.venv
 
 ## Not in .gitignore
 
