CI: fix poetry in coverage job

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1426,6 +1426,9 @@ test_coverage:
     - make
     # A failing test shouldn't prevent the generation of the report (|| true)
     - dune build @runtest || true
+    # Load the environment poetry previously created in the docker image.
+    # Give access to the Python dependencies/executables
+    - . $HOME/.venv/bin/activate
     - make -C tests_python all || true
     - make coverage-report
     - make coverage-report-summary
