Codec: Optionally link to protocols

--- a/src/bin_codec/dune
+++ b/src/bin_codec/dune
@@ -10,9 +10,15 @@
             tezos-client-base-unix
             tezos-clic
             tezos-signer-services
-            tezos-client-alpha
-            tezos-client-005-PsBabyM1
-            tezos-client-006-PsCARTHA
+            (select void_for_linking-alpha from
+              (tezos-client-alpha -> void_for_linking)
+              (-> void_for_linking))
+            (select void_for_linking-005-PsBabyM1 from
+              (tezos-client-005-PsBabyM1 -> void_for_linking)
+              (-> void_for_linking))
+            (select void_for_linking-006-PsCARTHA from
+              (tezos-client-006-PsCARTHA -> void_for_linking)
+              (-> void_for_linking))
  )
  (flags (:standard -open Data_encoding
                    -open Tezos_base__TzPervasives
@@ -22,6 +28,10 @@
                    -open Tezos_stdlib_unix
                    -open Tezos_event_logging
                    -linkall)))
+
+(rule
+  (target void_for_linking)
+  (action (write-file ${target} "")))
 
 (alias
  (name runtest_lint)
