--- a/src/lib_stdlib_unix/test/dune
+++ b/src/lib_stdlib_unix/test/dune
@@ -1,137 +1,113 @@
 (executables
  (names
+   test_lwt_exit_after
+   test_lwt_exit_clean_up
+   test_lwt_exit_clean_up_failure
+   test_lwt_exit_clean_up_timeout
    test_lwt_exit_exit
    test_lwt_exit_exit_escape
-   test_lwt_exit_return
-   test_lwt_exit_after
-   test_lwt_exit_signal
-   test_lwt_exit_clean_up
-   test_lwt_exit_unregister_clean_up
-   test_lwt_exit_unregister_clean_up_with_after
    test_lwt_exit_raise
    test_lwt_exit_raise_exit
    test_lwt_exit_range_of_signals
+   test_lwt_exit_return
+   test_lwt_exit_signal
+   test_lwt_exit_unregister_clean_up
+   test_lwt_exit_unregister_clean_up_with_after
    )
  (libraries tezos-stdlib-unix
             tezos-stdlib
             lwt.unix)
  (flags (:standard -open Tezos_stdlib_unix)))
 
-(rule
- (alias buildtest)
- (deps test_lwt_exit_exit.exe)
- (action (progn)))
+(alias
+ (name buildtest)
+ (deps
+       test_lwt_exit_after.exe
+       test_lwt_exit_clean_up.exe
+       test_lwt_exit_clean_up_failure.exe
+       test_lwt_exit_clean_up_timeout.exe
+       test_lwt_exit_exit_escape.exe
+       test_lwt_exit_exit.exe
+       test_lwt_exit_raise.exe
+       test_lwt_exit_raise_exit.exe
+       test_lwt_exit_range_of_signals.exe
+       test_lwt_exit_return.exe
+       test_lwt_exit_signal.exe
+       test_lwt_exit_unregister_clean_up.exe
+       test_lwt_exit_unregister_clean_up_with_after.exe
+ ))
 
 (rule
  (alias runtest_lwt_exit_exit)
  (action (run %{exe:test_lwt_exit_exit.exe})))
 
 (rule
- (alias buildtest)
- (deps test_lwt_exit_exit_escape.exe)
- (action (progn)))
-
-(rule
  (alias runtest_lwt_exit_exit_escape)
  (action (run %{exe:test_lwt_exit_exit_escape.exe})))
-
-(rule
- (alias buildtest)
- (deps test_lwt_exit_return.exe)
- (action (progn)))
 
 (rule
  (alias runtest_lwt_exit_return)
  (action (run %{exe:test_lwt_exit_return.exe})))
 
 (rule
- (alias buildtest)
- (deps test_lwt_exit_after.exe)
- (action (progn)))
-
-(rule
  (alias runtest_lwt_exit_after)
  (action (run %{exe:test_lwt_exit_after.exe})))
-
-(rule
- (alias buildtest)
- (deps test_lwt_exit_signal.exe)
- (action (progn)))
 
 (rule
  (alias runtest_lwt_exit_signal)
  (action (run %{exe:test_lwt_exit_signal.exe})))
 
 (rule
- (alias buildtest)
- (deps test_lwt_exit_clean_up.exe)
- (action (progn)))
-
-(rule
  (alias runtest_lwt_exit_clean_up)
  (action (run %{exe:test_lwt_exit_clean_up.exe})))
-
-(rule
- (alias buildtest)
- (deps test_lwt_exit_unregister_clean_up.exe)
- (action (progn)))
 
 (rule
  (alias runtest_test_lwt_exit_unregister_clean_up)
  (action (run %{exe:test_lwt_exit_unregister_clean_up.exe})))
 
 (rule
- (alias buildtest)
- (deps test_lwt_exit_unregister_clean_up_with_after.exe)
- (action (progn)))
-
-(rule
  (alias runtest_test_lwt_exit_unregister_clean_up_with_after)
  (action (run %{exe:test_lwt_exit_unregister_clean_up_with_after.exe})))
-
-(rule
- (alias buildtest)
- (deps test_lwt_exit_raise.exe)
- (action (progn)))
 
 (rule
  (alias runtest_test_lwt_exit_raise)
  (action (run %{exe:test_lwt_exit_raise.exe})))
 
 (rule
- (alias buildtest)
- (deps test_lwt_exit_raise_exit.exe)
- (action (progn)))
-
-(rule
  (alias runtest_test_lwt_exit_raise_exit)
  (action (run %{exe:test_lwt_exit_raise_exit.exe})))
-
-(rule
- (alias buildtest)
- (deps test_lwt_exit_range_of_signals.exe)
- (action (progn)))
 
 (rule
  (alias runtest_test_lwt_exit_range_of_signals)
  (action (run %{exe:test_lwt_exit_range_of_signals.exe})))
 
 (rule
- (alias runtest)
+ (alias runtest_test_lwt_exit_clean_up_failure)
+ (action (run %{exe:test_lwt_exit_clean_up_failure.exe})))
+
+(rule
+ (alias runtest_test_lwt_exit_clean_up_timeout)
+ (action (run %{exe:test_lwt_exit_clean_up_timeout.exe})))
+
+(alias
+ (name runtest)
  (package tezos-stdlib-unix)
- (deps (alias runtest_lwt_exit_exit)
+ (deps
+       (alias runtest_lwt_exit_after)
+       (alias runtest_lwt_exit_clean_up)
+       (alias runtest_lwt_exit_exit)
        (alias runtest_lwt_exit_exit_escape)
        (alias runtest_lwt_exit_return)
-       (alias runtest_lwt_exit_after)
        (alias runtest_lwt_exit_signal)
-       (alias runtest_lwt_exit_clean_up)
-       (alias runtest_test_lwt_exit_unregister_clean_up)
-       (alias runtest_test_lwt_exit_unregister_clean_up_with_after)
+       (alias runtest_test_lwt_exit_clean_up_failure)
+       (alias runtest_test_lwt_exit_clean_up_timeout)
        (alias runtest_test_lwt_exit_raise)
        (alias runtest_test_lwt_exit_raise_exit)
        (alias runtest_test_lwt_exit_range_of_signals)
+       (alias runtest_test_lwt_exit_unregister_clean_up)
+       (alias runtest_test_lwt_exit_unregister_clean_up_with_after)
  )
- (action (progn)))
+)
 
 (rule
  (alias runtest_lint)
