proxy: Add alcotest
This test tests:

* the implementation of PROTO_RPC, i.e. Proxy_getter.Make
* the implementation of Proxy_getter.RequestsTree, i.e. the
  data structure used to decide whenever an RPC must be done
  or whether existing data can be reused.

Both of these algorithms are at the heart of the proxy's logic.

--- a/.gitlab/ci/unittest.yml
+++ b/.gitlab/ci/unittest.yml
@@ -45,6 +45,7 @@ unit:alltest:
     - scripts/test_wrapper.sh src/lib_p2p p2p
     - scripts/test_wrapper.sh src/lib_protocol_compiler protocol_compiler
     - scripts/test_wrapper.sh src/lib_protocol_environment protocol_environment
+    - scripts/test_wrapper.sh src/lib_proxy proxy
     - scripts/test_wrapper.sh src/lib_requester requester
     - scripts/test_wrapper.sh src/lib_sapling sapling
     - scripts/test_wrapper.sh src/lib_shell shell
