--- a/src/lib_proxy/tezos-proxy.opam
+++ b/src/lib_proxy/tezos-proxy.opam
@@ -13,6 +13,8 @@ depends: [
   "tezos-protocol-environment"
   "tezos-rpc"
   "tezos-shell-services"
+  "alcotest-lwt" { with-test & >= "1.1.0" }
+  "tezos-test-services" { with-test }
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
