Tests/poetry: add black formatter to dependencies

--- a/tests_python/pyproject.toml
+++ b/tests_python/pyproject.toml
@@ -32,3 +32,4 @@ pytest = "*"
 pytest-regtest = { "git" = "https://gitlab.com/nomadic-labs/pytest-regtest", branch="fc5bd9b2" }
 pytest-timeout = "*"
 requests = "*"
+black = "19.10b0"
