--- a/src/lib_clic/test/dune
+++ b/src/lib_clic/test/dune
@@ -1,20 +1,13 @@
 (executables
- (names
-   test_clic
- )
- (libraries
-   tezos-clic
-   alcotest-lwt
- )
- (flags (:standard
-          -open Tezos_clic
-        )))
+ (names test_clic)
+ (libraries tezos-clic
+            alcotest-lwt)
+ (flags (:standard -open Tezos_stdlib
+                   -open Tezos_clic)))
 
 (alias
  (name buildtest)
- (deps
-   test_clic.exe
- ))
+ (deps test_clic.exe))
 
 (alias
  (name runtest_clic)
@@ -23,6 +16,9 @@
 (alias
  (name runtest)
  (package tezos-clic)
- (deps
-   (alias runtest_clic)
- ))
+ (deps (alias runtest_clic)))
+
+(alias
+ (name runtest_lint)
+ (deps (glob_files *.ml{,i}))
+ (action (run %{lib:tezos-tooling:lint.sh} %{deps})))
