Build: add snoop deps in opam

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@
 
 variables:
   ## Please update `scripts/version.sh` accordingly
-  build_deps_image_version: dbeca0ad991ae08bff8a403d26332943a92d500b
+  build_deps_image_version: 2e44bb93832ac3b72243284b38db92b0b238cc22
   build_deps_image_name: registry.gitlab.com/tezos/opam-repository
   public_docker_image_name: docker.io/${CI_PROJECT_PATH}
   GIT_STRATEGY: fetch
@@ -844,6 +844,11 @@ opam:tezos-base:
   <<: *opam_definition
   variables:
     package: tezos-base
+
+opam:tezos-benchmark:
+  <<: *opam_definition
+  variables:
+    package: tezos-benchmark
 
 opam:tezos-clic:
   <<: *opam_definition
