--- a/src/lib_shell/tezos-shell.opam
+++ b/src/lib_shell/tezos-shell.opam
@@ -20,6 +20,7 @@ depends: [
   "lwt-watcher" { = "0.1" }
   "lwt-canceler" { = "0.2" }
   "alcotest-lwt" { with-test & >= "1.1.0" }
+  "crowbar" { with-test }
   "tezos-workers"
   "tezos-test-services" { with-test }
   "tezos-embedded-protocol-demo-noops" { with-test }
