--- a/src/lib_p2p/test/dune
+++ b/src/lib_p2p/test/dune
@@ -33,14 +33,17 @@
 
 (rule
  (alias runtest_p2p_socket)
+ (locks /ports/49152-65535)
  (action (run %{exe:test_p2p_socket.exe} -v)))
 
 (rule
  (alias runtest_p2p_pool)
+ (locks /ports/49152-65535)
  (action (run %{exe:test_p2p_pool.exe} --clients 10 --repeat 5 -v)))
 
 (rule
  (alias runtest_p2p_io_scheduler)
+ (locks /ports/49152-65535)
  (action (run %{exe:test_p2p_io_scheduler.exe}
               --delay 5 --clients 8
               --max-upload-speed 262144 ;; 1 << 18 = 256kB
@@ -49,16 +52,19 @@
 
 (rule
  (alias runtest_p2p_socket_ipv4)
+ (locks /ports/49152-65535)
  (action (run %{exe:test_p2p_socket.exe} -v
               --addr "::ffff:127.0.0.1")))
 
 (rule
  (alias runtest_p2p_pool_ipv4)
+ (locks /ports/49152-65535)
  (action (run %{exe:test_p2p_pool.exe} --clients 10 --repeat 5 -v
               --addr "::ffff:127.0.0.1")))
 
 (rule
  (alias runtest_p2p_io_scheduler_ipv4)
+ (locks /ports/49152-65535)
  (action (run %{exe:test_p2p_io_scheduler.exe}
               --delay 5 --clients 8
               --max-upload-speed 262144 ;; 1 << 18 = 256kB
