--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -654,6 +654,8 @@ documentation:linkcheck:
       when: never
     - if: '$CI_COMMIT_BRANCH == "master"'
       when: on_success
+    - if: '$CI_COMMIT_BRANCH == "proto-proposal"'
+      when: on_success
     - if: '$CI_COMMIT_BRANCH =~ /opam/'
       when: on_success
     - changes:
