Tests/Crypto: merge Keccak / sha3

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -399,6 +399,12 @@ integration:cors:
     - poetry run pytest tests/test_cors.py -s --log-dir=tmp
   stage: test
 
+integration:crypto:
+  <<: *integration_python_definition
+  script:
+    - poetry run pytest tests/test_crypto.py -s --log-dir=tmp
+  stage: test
+
 integration:double_endorsement:
   <<: *integration_python_definition
   script:
@@ -421,12 +427,6 @@ integration:injection:
   <<: *integration_python_definition
   script:
     - poetry run pytest tests/test_injection.py -s --log-dir=tmp
-  stage: test
-
-integration:keccak:
-  <<: *integration_python_definition
-  script:
-    - poetry run pytest tests/test_keccak.py -s --log-dir=tmp
   stage: test
 
 integration:many_bakers:
@@ -511,12 +511,6 @@ integration:rpc:
   <<: *integration_python_definition
   script:
     - poetry run pytest tests/test_rpc.py -s --log-dir=tmp
-  stage: test
-
-integration:sha3:
-  <<: *integration_python_definition
-  script:
-    - poetry run pytest tests/test_sha3.py -s --log-dir=tmp
   stage: test
 
 integration:tls:
