Add package pycryptodome to poetry
This is needed to test Keccak and Sha3

--- a/tests_python/pyproject.toml
+++ b/tests_python/pyproject.toml
@@ -24,6 +24,7 @@ ed25519 = "1.4"
 mypy = "*"
 mypy-extensions = "*"
 pyblake2 = "1.1.2"
+pycryptodome = "3.9.7"
 pycodestyle = "*"
 py_ecc = "2.0.0"
 pylint = "*"
